[package]
name = "trace-duration-rs"
version = "0.7.0"
edition = "2021"
authors = ["Joel Gruselius <github.com/jgruselius>"]
description = "Find the time passed between the (first) occurrence of two strings or patterns in a log file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
chrono = "0.4"
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
